quick pay and bug fixes

--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/interest-calculator/interest-calculator.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/interest-calculator/interest-calculator.component.html
@@ -4,77 +4,11 @@
             <div class="col-6">
                 <div class="row">
                     <div class="col-4 form-label">
-                        <label class="mandatory">Tenure</label>
-                    </div>
-                    <div class="col-7">
-                        <select formControlName="tenure" class="form-control" (change)="setEndDate()"
-                            [class.isError]="controls.tenure.touched && controls.tenure.invalid">
-                            <option value="null" [selected]="true" [disabled]="true">Select Tenure</option>
-                            <option [value]="ten" *ngFor="let ten of tenure;index as i">
-                                <span *ngIf="i==0">{{ten}} Month</span>
-                                <span *ngIf="i > 0">{{ten}} Months</span>
-                            </option>
-                        </select>
-                        <mat-error *ngIf="controls.tenure.errors?.required && controls.tenure.touched">
-                            Required field
-                        </mat-error>
-                    </div>
-                </div>
-            </div>
-            <div class="col-6">
-                <div class="row">
-                    <div class="col-4 form-label">
-                        <label class="mandatory">Partner Name</label>
-                    </div>
-                    <div class="col-7">
-                        <select formControlName="partnerId" class="form-control" (change)="getSchemes()"
-                            [class.isError]="controls.partnerId.touched && controls.partnerId.invalid">
-                            <option value="null" [selected]="true" [disabled]="true">Select Partner</option>
-                            <option value="" selected disabled *ngIf="partnerList.length == 0">No matching Scheme found
-                            </option>
-                            <option [value]="partner.id" *ngFor="let partner of partnerList">
-                                {{partner.name | uppercase}}
-                            </option>
-                        </select>
-                        <mat-error *ngIf="controls.partnerId.touched && controls.partnerId.invalid">Filed is
-                            required</mat-error>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-
-        <div class="row kt-margin-b-20">
-            <div class="col-6">
-                <div class="row">
-                    <div class="col-4 form-label">
-                        <label class="mandatory">Scheme Name</label>
-                    </div>
-                    <div class="col-7">
-                        <select formControlName="schemeId" class="form-control" (change)="scheme()"
-                            [class.isError]="controls.schemeId.touched && controls.schemeId.invalid">
-                            <option value="null" [selected]="true" [disabled]="true">Select Schemes</option>
-                            <option value="" selected disabled *ngIf="partnerList.length == 0">No matching Scheme found
-                            </option>
-                            <option [value]="schemes.id" *ngFor="let schemes of schemesList">
-                                {{schemes.schemeName | uppercase}} ({{schemes.schemeAmountStart}} -
-                                {{schemes.schemeAmountEnd}})
-                            </option>
-                        </select>
-                        <mat-error *ngIf="controls.schemeId.touched && controls.schemeId.invalid">Filed is required
-                        </mat-error>
-                    </div>
-                </div>
-            </div>
-            <div class="col-6">
-
-                <div class="row">
-                    <div class="col-4 form-label">
                         <label class="mandatory">Loan Amount</label>
                     </div>
                     <div class="col-7">
-                        <input type="number" class="form-control" formControlName="finalLoanAmount"
-                            placeholder="0,00,000" (blur)="amountValidation();getIntrest()"
+                        <input type="number" #amt class="form-control" formControlName="finalLoanAmount"
+                            placeholder="0,00,000" (blur)="eligibleCheck(amt.value);amountValidation();getIntrest()"
                             [class.isError]="controls.finalLoanAmount.touched && controls.finalLoanAmount.invalid" />
                         <div>
                             <mat-error
@@ -111,8 +45,75 @@
 
                     </div>
                 </div>
+
+            </div>
+            <div class="col-6">
+                <div class="row">
+                    <div class="col-4 form-label">
+                        <label class="mandatory">Tenure</label>
+                    </div>
+                    <div class="col-7">
+                        <select formControlName="tenure" class="form-control" (change)="setEndDate()"
+                            [class.isError]="controls.tenure.touched && controls.tenure.invalid">
+                            <option value="null" [selected]="true" [disabled]="true">Select Tenure</option>
+                            <option [value]="ten" *ngFor="let ten of tenure;index as i">
+                                <span *ngIf="i==0">{{ten}} Month</span>
+                                <span *ngIf="i > 0">{{ten}} Months</span>
+                            </option>
+                        </select>
+                        <mat-error *ngIf="controls.tenure.errors?.required && controls.tenure.touched">
+                            Required field
+                        </mat-error>
+                    </div>
+                </div>
+
             </div>
 
+        </div>
+
+        <div class="row kt-margin-b-20">
+            <div class="col-6">
+                <div class="row">
+                    <div class="col-4 form-label">
+                        <label class="mandatory">Partner Name</label>
+                    </div>
+                    <div class="col-7">
+                        <select formControlName="partnerId" class="form-control" (change)="getSchemes()"
+                            [class.isError]="controls.partnerId.touched && controls.partnerId.invalid">
+                            <option value="null" [selected]="true" [disabled]="true">Select Partner</option>
+                            <option value="" selected disabled *ngIf="partnerList.length == 0">No matching Scheme found
+                            </option>
+                            <option [value]="partner.id" *ngFor="let partner of partnerList">
+                                {{partner.name | uppercase}}
+                            </option>
+                        </select>
+                        <mat-error *ngIf="controls.partnerId.touched && controls.partnerId.invalid">Filed is
+                            required</mat-error>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6">
+
+                <div class="row">
+                    <div class="col-4 form-label">
+                        <label class="mandatory">Scheme Name</label>
+                    </div>
+                    <div class="col-7">
+                        <select formControlName="schemeId" class="form-control" (change)="scheme()"
+                            [class.isError]="controls.schemeId.touched && controls.schemeId.invalid">
+                            <option value="null" [selected]="true" [disabled]="true">Select Schemes</option>
+                            <option value="" selected disabled *ngIf="partnerList.length == 0">No matching Scheme found
+                            </option>
+                            <option [value]="schemes.id" *ngFor="let schemes of schemesList">
+                                {{schemes.schemeName | uppercase}} ({{schemes.schemeAmountStart}} -
+                                {{schemes.schemeAmountEnd}})
+                            </option>
+                        </select>
+                        <mat-error *ngIf="controls.schemeId.touched && controls.schemeId.invalid">Filed is required
+                        </mat-error>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="row kt-margin-b-20">
@@ -172,7 +173,7 @@
                     </div>
                     <div class="col-7">
                         <input type="number" class="form-control" formControlName="interestRate" placeholder="00%"
-                            [class.isError]="controls.interestRate.touched && controls.interestRate.invalid" readonly/>
+                            [class.isError]="controls.interestRate.touched && controls.interestRate.invalid" readonly />
                         <mat-error *ngIf="controls.interestRate.errors?.required && controls.interestRate.touched">
                             Required field
                         </mat-error>
@@ -232,7 +233,7 @@
             <kt-button [value]="'Calculate'" [type]="'button'" (action)="calcInterestAmount()"></kt-button>
         </div>
     </div>
-    
+
     <div #calculation id="calculation" class="row justify-content-center kt-margin-b-20" *ngIf="dateOfPayment.length">
         <div class="col-8">
             <div class="row justify-content-center">
@@ -253,7 +254,8 @@
                                     </th>
                                     <th scope="col" class=" text-center"
                                         *ngIf="controls.isUnsecuredSchemeApplied.value">
-                                        {{partnerName | uppercase }} / {{selectedUnsecuredscheme[0]?.schemeName | titlecase}}
+                                        {{partnerName | uppercase }} /
+                                        {{selectedUnsecuredscheme[0]?.schemeName | titlecase}}
                                         ({{controls.unsecuredInterestRate.value}}%)
                                     </th>
                                     <th scope="col" class=" text-center"
