--- a/gold-admin-frontend/src/app/views/pages/admin/loan-settings/add-scheme/add-scheme.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-settings/add-scheme/add-scheme.component.html
@@ -152,6 +152,20 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row kt-margin-t-10">
+                        <div class="col-3 form-label">
+                            <label class="kt-padding-l-10 mandatory"> Split at Beginning</label>
+                        </div>
+                        <div class="col-9 form-label kt-padding-l-10">
+                           <input type="radio" name="split" id="yes" value="true" formControlName="isSplitAtBeginning">
+                           <label for="yes" >Yes</label>
+                           <span class="kt-padding-l-10"></span>
+                           <input type="radio" name="split" id="no" value="false" formControlName="isSplitAtBeginning" >
+                           <label for="no">No</label>
+
+                        </div>
+                    </div>
+                    
                     <div class="row kt-padding-t-15">
                         <div class="offset-3 col-3">
                             <p class="text-color form-label">30 Days</p>
