--- a/gold-admin-frontend/src/app/views/pages/admin/user-management/internal-user-branch/add-internal-user-branch/add-internal-user-branch.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/user-management/internal-user-branch/add-internal-user-branch/add-internal-user-branch.component.html
@@ -38,7 +38,7 @@
                         <div class="row kt-padding-t-15">
                             <div class="col-4 form-label">
                                 <label for="" *ngIf="data.action!='view'"
-                                    class="kt-padding-l-10 text-color mandatory">Select Parnter</label>
+                                    class="kt-padding-l-10 text-color mandatory">Select Partner</label>
                                 <label for="" *ngIf="data.action =='view'"
                                     class="kt-padding-l-10 text-color">Parnter</label>
                             </div>
