frontend build changes

--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/packet-tracking/packet-tracking.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/packet-tracking/packet-tracking.component.html
@@ -1,7 +1,7 @@
 <kt-portlet>
 
     <kt-portlet-body>
-        <button (click)="updatePacket(loan)">tracking</button>
+        <button>tracking</button>
         <div class="mat-table__wrapper">
             <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource">
                 <ng-container matColumnDef="packetUniqueId">
