--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/update-location/update-location.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/update-location/update-location.component.html
@@ -65,7 +65,7 @@
                     <div class="row justify-content-center kt-margin-t-15">
                         <div class="col-4 offset-4">
                             <kt-button [type]="'button'" [value]="'Send OTP'"></kt-button>
-                            <mat-hint class="kt-pointer kt-margin-l-5" (click)="resendOTP()">
+                            <mat-hint class="kt-pointer kt-margin-l-5">
                                 Resend OTP</mat-hint>
                         </div>
                         <div class="col-4">
