unsecure loan pdf  api added

--- a/gold-loan-backend/templates/acknowledge-template.html
+++ b/gold-loan-backend/templates/acknowledge-template.html
@@ -147,13 +147,14 @@
                     style="width:100%;margin:0;font-size: small;font-weight: 500;table-layout: fixed;">
                     <tr>
                         <p class="text-center pb-2"><b>Bank Details</b></p>
+                        <p class="text-center pb-2">You can pay for your loan using RTGS/NEFT/IMPS</p>
                     </tr>
                     <tr>
                         <td class="align-top" style="width: 5%;">Saving A/C Number :</td>
                         <td style="width: 25%;">{{this.accountNumber}}</td>
                     </tr>
                     <tr>
-                        <td class="align-top" style="width: 5%;">Bank Name :</td>
+                        <td class="align-top" style="width: 5%;">Beneficiary Bank Name :</td>
                         <td style="width: 25%;">{{this.bankName}}</td>
                     </tr>
                     <tr>
