--- a/gold-loan-backend/templates/acknowledge-unsecure-template.html
+++ b/gold-loan-backend/templates/acknowledge-unsecure-template.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href={{bootstrapCss}}>
     <style>
-        /* html{zoom:0.75;} */
+        html{zoom:0.75;}
         .tableHead {
             width: 20%;
             height: 40px;
