--- a/gold-admin-frontend/src/app/views/partials/components/basic-details/basic-details.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/basic-details/basic-details.component.html
@@ -42,8 +42,9 @@
                             <label class="text-color kt-padding-l-10">KYC Status</label>
                         </div>
                         <div class="col-6">
-                           <input type="text" class="form-control position-relative text-capitalize" formControlName="kycStatus" readonly>
-                           <span class="inside-input" (click)="viewKYC()">View KYC</span>
+                            <input type="text" class="form-control position-relative text-capitalize"
+                                formControlName="kycStatus" readonly>
+                            <span class="inside-input" (click)="viewKYC()">View KYC</span>
                         </div>
                     </div>
                 </div>
