--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/loan-application-form.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/loan-application-form.component.html
@@ -70,8 +70,8 @@
 
                     <mat-tab label="Upload Documents"
                          *ngIf="loanStage?.id == 8 || loanStage?.id == 7 || loanStage?.id == 4 || url == 'view-loan'">
-                        <kt-upload-loan-documents [masterAndLoanIds]="masterAndLoanIds" (next)="next($event)"
-                            [loanDocumnets]="customerDetail" [showButton]="showButton"></kt-upload-loan-documents>
+                        <kt-upload-documents [masterAndLoanIds]="masterAndLoanIds" (next)="next($event)"
+                            [loanDocumnets]="customerDetail" [showButton]="showButton"></kt-upload-documents>
                     </mat-tab>
 
                     <mat-tab label="Loan Status Approval" *ngIf="loanStage?.id == 7 || loanStage?.id == 4 || (url == 'view-loan' && loanStage?.id == 7) || (url == 'view-loan' && loanStage?.id == 4) || (url == 'view-loan' && loanStage?.id == 5)">
