changes in templates

--- a/gold-loan-backend/templates/acknowledge-template.html
+++ b/gold-loan-backend/templates/acknowledge-template.html
@@ -103,9 +103,9 @@
                     </tr>
                     <tr>
                         <td class="align-top" style="width:25%;">Interest Rate :</td>
-                        <td style="width:25%;">{{this.interestRate}}</td>
+                        <td style="width:25%;">{{this.interestRate}}%</td>
                         <td class="align-top" style="width:25%;">Penal Charges :</td>
-                        <td style="width:25%;">{{this.penalCharges}}</td>
+                        <td style="width:25%;">{{this.penalCharges}}%</td>
                     </tr>
                 </table>
 
