bhushan::part release final status

--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-approval/part-release-approval/part-release-approval.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-approval/part-release-approval/part-release-approval.component.html
@@ -121,6 +121,9 @@
                                 </button>
                             </div>
                         </ng-container>
+
+                        <!-- <button style="width: 120px;" class="apply-kyc" (click)="updateStatus(item)">Update
+                        </button> -->
                     </mat-cell>
                 </ng-container>
 
